[package]
name = "cron-rs"
version = "0.1.0"
authors = ["Dean Karn <dean.karn@gmail.com>"]
description = "A CRON expression parser and explorer designed for space efficiency for caching and storage purposes such as in a CRON Scheduler."
edition = "2018"
keywords = [
    "cron",
    "schedule",
    "crontab",
    "vixie",
]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/rust-playground/cron-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.24"
chrono = "0.4.19"
once_cell = "1.5.2"

[dev-dependencies]
chrono-tz = "0.5.3"
